force-app/main/default/objects/Social_Media_Stats__c/Social_Media_Stats__c.object-meta.xml
<CustomObject>
    <label>Social Media Stats</label>
    <nameField>
        <displayFormat>Social Media-{00000}</displayFormat>
        <label>Social Media Stats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Media Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>