force-app/main/default/objects/Social_Media_Stats__c/fields/active_members_percent__c.field-meta.xml
<CustomField>
    <fullName>active_members_percent__c</fullName>
    <formula>active_members__c /  total_members__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Members %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>