force-app/main/default/objects/Social_Media_Stats__c/fields/Date_Corrected__c.field-meta.xml
<CustomField>
    <fullName>Date_Corrected__c</fullName>
    <label>Date Corrected</label>
    <type>Date</type>
</CustomField>