force-app/main/default/objects/Social_Media_Stats__c/fields/Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID__c</fullName>
    <label>Deal ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>