force-app/main/default/objects/Social_Media_Stats__c/fields/Error_Found__c.field-meta.xml
<CustomField>
    <fullName>Error_Found__c</fullName>
    <label>Error Found</label>
    <type>Date</type>
</CustomField>