force-app/main/default/objects/Social_Media_Stats__c/fields/Error_Posted__c.field-meta.xml
<CustomField>
    <fullName>Error_Posted__c</fullName>
    <label>Error Posted</label>
    <type>Date</type>
</CustomField>