force-app/main/default/objects/Social_Media_Stats__c/fields/Errors_on_Posts__c.field-meta.xml
<CustomField>
    <fullName>Errors_on_Posts__c</fullName>
    <label>Errors on Posts</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>