force-app/main/default/objects/Social_Media_Stats__c/fields/facebook_NZ__c.field-meta.xml
<CustomField>
    <fullName>facebook_NZ__c</fullName>
    <inlineHelpText>Please enter as a number</inlineHelpText>
    <label>Facebook NZ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>