force-app/main/default/objects/Social_Media_Stats__c/fields/Growth_Facebook_AU__c.field-meta.xml
<CustomField>
    <fullName>Growth_Facebook_AU__c</fullName>
    <label>% Growth Facebook AU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>