force-app/main/default/objects/Social_Media_Stats__c/fields/Growth_Instagram_NZ__c.field-meta.xml
<CustomField>
    <fullName>Growth_Instagram_NZ__c</fullName>
    <label>% Growth Instagram NZ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>