force-app/main/default/objects/Social_Media_Stats__c/fields/Growth_Travel_Buddy__c.field-meta.xml
<CustomField>
    <fullName>Growth_Travel_Buddy__c</fullName>
    <label>% Growth Travel Buddy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>