force-app/main/default/objects/Social_Media_Stats__c/fields/instagram__c.field-meta.xml
<CustomField>
    <fullName>instagram__c</fullName>
    <inlineHelpText>Please enter as a number</inlineHelpText>
    <label>Instagram AU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>