force-app/main/default/objects/Social_Media_Stats__c/fields/total_members__c.field-meta.xml
<CustomField>
    <fullName>total_members__c</fullName>
    <label>Total Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>