force-app/main/default/objects/Social_Media_Stats__c/fields/travel_buddy__c.field-meta.xml
<CustomField>
    <fullName>travel_buddy__c</fullName>
    <inlineHelpText>Please enter as a number</inlineHelpText>
    <label>Travel Buddy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>