force-app/main/default/objects/Social_Media_Stats__c/fields/Type_of_Error__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Error__c</fullName>
    <label>Type of Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect pricing</fullName>
            </value>
            <value>
                <fullName>Incorrect information</fullName>
            </value>
            <value>
                <fullName>Incorrect image</fullName>
            </value>
            <value>
                <fullName>Removed due to current situation</fullName>
            </value>
            <value>
                <fullName>Removed - no allocation</fullName>
            </value>
            <value>
                <fullName>No link to TAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>