force-app/main/default/objects/Social_Media_Stats__c/fields/week_ending__c.field-meta.xml
<CustomField>
    <fullName>week_ending__c</fullName>
    <label>Week Ending</label>
    <type>Date</type>
</CustomField>